--- a/config.toml.sample
+++ b/config.toml.sample
@@ -7,7 +7,7 @@ rpc_port = 9000
 name = "example_cmd"
 exec_type = "cmd"
 path = "D:\\examples\\example.bat"
-args = []
+args = ["some", "batch", "args"]
 working_dir = "D:\\"
 start_priority = 1
 restart_on_error = false
@@ -16,7 +16,7 @@ restart_on_error = false
 name = "example_ps1"
 exec_type = "ps1"
 path = "D:\\examples\\example.ps1"
-args = []
+args = ["some","powershell", "args"]
 working_dir = "D:\\"
 start_priority = 2
 restart_on_error = false
@@ -25,7 +25,7 @@ restart_on_error = false
 name = "example_dotnet"
 exec_type = "dotnet"
 path = "D:\\examples\\example.dll"
-args = []
+args = ["some", "dotnet", "assembly", "args"]
 working_dir = "D:\\"
 start_priority = 3
 restart_on_error = false
@@ -33,7 +33,7 @@ restart_on_error = false
 [[service]]
 name = "example_msbuild"
 exec_type = "msbuild"
-path = "D:\\examples\\dotnet_loader_task.xml"
+path = "D:\\examples\\dotnet_msbuild.xml"
 args = []
 working_dir = "D:\\"
 start_priority = 4
@@ -43,7 +43,7 @@ restart_on_error = false
 name = "example_native"
 exec_type = "native"
 path = "D:\\examples\\example.exe"
-args = []
+args = ["some","native","args"]
 working_dir = "D:\\"
 start_priority = 5
 ports = [8080]
