--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,8 +30,9 @@ chrono = { version = "0.4", features = ["serde", "clock"] }
 clap = { version = "4.5.40", features = ["derive"] }
 
 [features]
-default = ["network_server"]
+default = ["network_server", "firewall"]
 network_server = []
+firewall = []
 
 [build-dependencies]
 chrono = "0.4"
