--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ flexi_logger = "0.25"
 serde_json = "1.0"
 thiserror = "1.0"
 tempfile = "3.8"
+base64 = "0.21"
 windows = { version = "0.52", features = [
     "Win32_Foundation",
     "Win32_Security",
