--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,7 @@ windows = { version = "0.52", features = [
     "Win32_System_Shutdown"
 ]}
 chrono = { version = "0.4", features = ["serde", "clock"] }
-clap = { version = "4.5.40", features = ["derive"] }
+clap = { version = "4.5.40", features = ["derive", "string"] }
 
 [features]
 default = ["network_server", "firewall"]
